--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,67 @@
-.App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
+.container {
   min-height: 100vh;
+  width: 100%;
+  background-color: #1a1616;
+  color: white;
   display: flex;
   flex-direction: column;
-  align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
+  align-items: center;
+}
+.heading {
+  color: #c7662e;
+  text-align: center;
+  font-family: Bree sans-serif;
+  font-size: 56px;
+}
+.level-number {
+  font-size: 20px;
+}
+
+.string-content {
+  font-size: 40px;
+}
+.type-area {
+  height: 60px;
+  min-width: 600px;
+  border-radius: 10px;
+  text-align: center;
+}
+.input-area {
+  outline: none;
+  font-size: 36px;
+  text-align: center;
+}
+.practice-again-btn {
+  border-radius: 5px;
   color: white;
+  background-color: #c7662e;
+  border-width: 0;
+  height: 35px;
+  padding: 5px;
+  width: 150px;
+  font-size: 20px;
 }
 
-.App-link {
-  color: #61dafb;
+.result-container {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  min-height: 100vh;
+  background-color: #1a1616;
+}
+.final-display-content {
+  color: #c7662e;
+  font-family: Bree sans-serif;
+  font-size: 38px;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.result-content-container {
+  box-shadow: 4px 4px 4px 4px #3a3a3b;
+  padding: 20px;
+  border-radius: 8px;
+  border-width: 0;
+  width: 80%;
+  text-align: center;
 }
